# parallel-prog-project

./: CMakeLists.txt  README.md  graph.c  graph.h  quick.c  quick.h  util.c  util.h
